--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+              "theme.scss",
               "src/styles.css"
             ],
             "scripts": []
@@ -89,7 +89,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+              "theme.scss",
               "src/styles.css"
             ],
             "scripts": []
