--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run hannes-stark:serve-ssr",
+    "serve:ssr": "node dist/hannes-stark/server/main.js",
+    "build:ssr": "ng build --prod && ng run hannes-stark:server:production",
+    "prerender": "ng run hannes-stark:prerender"
   },
   "private": true,
   "dependencies": {
@@ -21,22 +25,30 @@
     "@angular/material": "^10.2.2",
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
+    "@angular/platform-server": "~10.1.2",
     "@angular/router": "~10.1.2",
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "angular-bootstrap-md": "^10.0.0",
     "angular-material-icons": "^0.7.1",
+    "css-vars-ponyfill": "^2.1.2",
+    "express": "^4.15.2",
+    "iban": "^0.0.12",
+    "moment": "^2.22.2",
+    "object-fit-images": "^3.2.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "what-input": "^5.1.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.2",
     "@angular/cli": "~10.1.2",
     "@angular/compiler-cli": "~10.1.2",
+    "@nguniversal/builders": "^10.1.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
