--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
     "object-fit-images": "^3.2.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "url-exists": "^1.0.3",
     "what-input": "^5.1.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.2",
+    "@angular-devkit/build-angular": "^0.1002.0",
     "@angular/cli": "~10.1.2",
     "@angular/compiler-cli": "~10.1.2",
     "@nguniversal/builders": "^10.1.0",
