--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@material/image-list": "^8.0.0",
     "angular-material-icons": "^0.7.1",
     "css-vars-ponyfill": "^2.1.2",
     "express": "^4.15.2",
